--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: We are the Security Wonks
+description: We are Information Security Practitioners with experience in Higher Education. We're here to share our knowledge.
