--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ name: Security Wonks
 description: We are Information Security Practitioners with experience in Higher Education. We're here to share our knowledge.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: http://secwonks.org/images/fine-wes.jpg
 
 #
 # Flags below are optional
