--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: jekyll-theme-tactile
 name: Security Wonks
 
 # Short bio or description (displayed in the header)
-description: We are Information Security Practitioners with experience in Higher Education. We're here to share our knowledge.
+description: We are a group of Information Security Practitioners with experience in Higher Education. We're here to share our knowledge.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://secwonks.org/images/fine-wes.png
