Removing github link for now

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   email: secwonks@gmail.com
   facebook:
   flickr:
-  github: secwonks
+  github:
   instagram:
   linkedin:
   pinterest:
