--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ remote_theme: jekyll-theme-tactile
 name: Security Wonks
 
 # Short bio or description (displayed in the header)
-description: We are a group of Information Security Practitioners with experience in Higher Education. We're here to share our knowledge.
+description: We are a group of Information Security Practitioners with a shared history in Higher Education. If you're currently in Higher Education IT Security, have been in the past, or are interested in the field, come join us on slack.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://secwonks.org/images/fine-wes.png
+avatar: http://secwonks.org/images/secwonks.png
 
 #
 # Flags below are optional
