--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ remote_theme: jekyll-theme-tactile
 name: Security Wonks
 
 # Short bio or description (displayed in the header)
-description: We are a group of Information Security Practitioners with a shared history in Higher Education. If you're currently in Higher Education IT Security, have been in the past, or are interested in the field, come join us on slack.
+description: We are a group of Information Security Practitioners with a shared history in Higher Education. If you're currently in Higher Education IT Security, have been in the past, or are interested in the field, come join our Slack.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://secwonks.org/images/secwonks.png
