Updating HTTPS link to avatar

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ name: Security Wonks
 description: We are a group of Information Security Practitioners with a shared history in Higher Education. If you're currently in Higher Education IT Security, have been in the past, or are interested in the field, come join our Slack.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://secwonks.org/images/secwonks.png
+avatar: https://secwonks.org/images/secwonks.png
 
 #
 # Flags below are optional
