--- a/_config.yml
+++ b/_config.yml
@@ -1,88 +1,51 @@
-#
-# This file contains configuration flags to customize your site
-#
+# Site settings
+title: Security Wonks
+description: >-
+  We are a group of Information Security Practitioners with a shared history in
+  Higher Education. If you're currently in Higher Education IT Security, have
+  been in the past, or are interested in the field, come join our Slack.
 
-remote_theme: jekyll-theme-tactile
-
-# Name of your site (displayed in the header)
-name: Security Wonks
-
-# Short bio or description (displayed in the header)
-description: We are a group of Information Security Practitioners with a shared history in Higher Education. If you're currently in Higher Education IT Security, have been in the past, or are interested in the field, come join our Slack.
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://secwonks.org/images/secwonks.png
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email: secwonks@gmail.com
-  facebook:
-  flickr:
-  github:
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: 
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-112089383-1
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: http://secwonks.org
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
+url: https://secwonks.org
 baseurl: ""
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+# Theme (GitHub Pages supported)
+remote_theme: jekyll-theme-tactile
 
+# Branding
+avatar: https://secwonks.org/images/secwonks.png
+
+# Permalinks
 permalink: /:title/
 
-# The release of Jekyll Now that you're using
-version: v1.2.0
+# Social / footer links
+footer-links:
+  email: secwonks@gmail.com
+  rss: true
 
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
+# Plugins supported by GitHub Pages
 plugins:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-sitemap
+  - jekyll-feed
 
-# Exclude these files from your production _site
+# Markdown & syntax highlighting
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+# Sass
+sass:
+  style: expanded
+
+# Analytics (remove old Universal Analytics)
+# google_analytics: G-XXXXXXXXXX
+
+# Comments (optional)
+# disqus: your-shortname
+
+# Excludes
 exclude:
   - Gemfile
   - Gemfile.lock
-  - LICENSE
   - README.md
+  - LICENSE
   - CNAME
